--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Mpakiaji ",
+  "name": "Mawaidha ",
   "description": "Telegram's best Open Source ALL-In-One Multi Purpose RoBot. Create your Fork now.",
   "keywords": [
     "telegram",
